k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-test
  labels:
    name: devops-test
