k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-test-app
  namespace: devops-test
  labels:
    app: devops-test-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: devops-test-app
